[gd_scene load_steps=4 format=3 uid="uid://bvgo3btpijh74"]

[ext_resource type="Script" path="res://scripts/area/dungeon.gd" id="1_i1xs4"]
[ext_resource type="PackedScene" uid="uid://73qmg0h8b3e2" path="res://resources/prefabs/tile_map_level.tscn" id="2_quob8"]
[ext_resource type="Script" path="res://scripts/area/entity_list.gd" id="4_afkpw"]

[node name="Dungeon" type="Node3D" node_paths=PackedStringArray("dungeon_entities", "levels")]
script = ExtResource("1_i1xs4")
dungeon_entities = NodePath("EntityList")
levels = [NodePath("TileMapLevel")]

[node name="TileMapLevel" parent="." instance=ExtResource("2_quob8")]

[node name="EntityList" type="Node3D" parent="."]
script = ExtResource("4_afkpw")

[connection signal="character_cast_move" from="EntityList" to="." method="_on_entity_list_character_cast_move"]
